RESOLVED FIXED19890
Assertion failure on exception in js console
https://bugs.webkit.org/show_bug.cgi?id=19890
Summary Assertion failure on exception in js console
Oliver Hunt
Reported 2008-07-03 14:07:12 PDT
I hit an assertion failure when i trigger an exception in the inspector console. To repro: 1. Open google.com in a debug build 2. open the web inspector 3. open the console 4. type 'a' (or some other non-existant variable) and hit enter
Attachments
Timothy Hatcher
Comment 1 2008-07-21 14:38:05 PDT
*** Bug 19960 has been marked as a duplicate of this bug. ***
Timothy Hatcher
Comment 2 2008-07-24 14:21:22 PDT
Timothy Hatcher
Comment 3 2009-03-01 22:45:55 PST
This no longer reproduces, but null is shown where there should be an exception.
Timothy Hatcher
Comment 4 2009-03-02 00:22:58 PST
Fixed the new symptom in r41353.
Note You need to log in before you can comment on or make changes to this bug.