        Show exception messages again when evaluating bad expressions in the         Web Inspector's console.

https://bugs.webkit.org/show_bug.cgi?id=19890

        Reviewed by Oliver Hunt.

        * bindings/js/JSQuarantinedObjectWrapper.cpp:
        (WebCore::JSQuarantinedObjectWrapper::transferExceptionToExecState):
        Fix the order in which the exception is set and cleared now that the
        exception is stored in the shared GlobalData, not per ExecState.

Canonical link: https://commits.webkit.org/33423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41353 268f45cc-cd09-0410-ab3c-d52691b4dbfc